[package]
name = "nature-of-coders"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools-num = "0.1.3"
lazy_static = "1.4.0"
nannou = "0.18.1"
nannou_egui = "0.5.0"
noise = "0.8.2"
rand = "0.8.5"
structstruck = "0.2.2"
